--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
-    "name": "Usul ad-Deen",
-    "short_name": "UsulDeen",
-    "start_url": "index.html",
-    "display": "standalone",
-    "background_color": "#f8f9fa",
-    "theme_color": "#2c3e50",
-    "icons": [
-        {
-            "src": "icons/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "Usul ad-Deen",
+  "short_name": "Usul ad-Deen",
+  "start_url": "index.html",
+  "display": "standalone",
+  "icons": [
+    {
+      "src": "icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "background_color": "#ffffff",
+  "theme_color": "#2c3e50"
 }
